--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="hero-content">
                 <div class="profile-section">
                     <div class="profile-image-container">
-                        <img src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2080&auto=format&fit=crop" 
+                        <img src="https://drive.google.com/uc?export=view&id=16Pmj5rzvpAR_FosB2Qvfr8XF3VX-aKdR" alt="Image">
+ 
                              alt="Profile" 
                              class="profile-image">
                         <div class="status-indicator">
