--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="hero-content">
                 <div class="profile-section">
                     <div class="profile-image-container">
-                        <img src="https://drive.google.com/uc?export=view&id=16Pmj5rzvpAR_FosB2Qvfr8XF3VX-aKdR" alt="Image">
+                        <img src="src/sunil.jpg" alt="Image">
+
  
                              alt="Profile" 
                              class="profile-image">
