--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="hero-content">
                 <div class="profile-section">
                     <div class="profile-image-container">
-                        <img src="src/sunil.jpg" alt="Image" style="width: 100%; height: auto; object-fit: cover;">
+                        <img src="src/sunil.jpg" alt="Image" style="width: 2080px; height: auto; object-fit: cover;">
+
 
 
 
