--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="hero-content">
                 <div class="profile-section">
                     <div class="profile-image-container">
-                        <img src="src/sunil.jpg" alt="Profile" class="profile-image">
+                        <img src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2080&auto=format&fit=crop"
 
 
 
